<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/num1"
            android:maxLength="10"
            android:inputType="number"
            android:hint="@string/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/num2"
            android:maxLength="10"
            android:inputType="number"
            android:hint="@string/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sum"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="wrap_content"
            android:text="@string/sum_lab" />

        <Button
            android:id="@+id/sub"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="wrap_content"
            android:text="@string/sub_lab" />

        <Button
            android:id="@+id/mult"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="wrap_content"
            android:text="@string/mult_lab" />

        <Button
            android:id="@+id/div"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="wrap_content"
            android:text="@string/div_lab" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_lab"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>